# orbitterm-client

./: .gitignore  LICENSE  NOTICE  OPEN_CORE_MANIFEST.json  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
releases/: latest.json
releases/v0.1.60/: SHA256SUMS.txt
releases/v0.1.61/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.62/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.63/: SHA256SUMS.txt
releases/v0.1.64/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.65/: SHA256SUMS.txt
releases/v0.1.66/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.67/: SHA256SUMS.txt
releases/v0.1.68/: SHA256SUMS.txt
releases/v0.1.69/: SHA256SUMS.txt
releases/v0.1.70/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.71/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.72/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.73/: SHA256SUMS.txt
releases/v0.1.74/: SHA256SUMS.txt
releases/v0.1.75/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.76/: SHA256SUMS.txt
releases/v0.1.77/: SHA256SUMS.txt
releases/v0.1.78/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.79/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.80/: SHA256SUMS.txt
releases/v0.1.81/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.82/: SHA256SUMS.txt  release-manifest.json
releases/v0.1.83/: SHA256SUMS.txt
releases/v0.1.84/: SHA256SUMS.android.txt  SHA256SUMS.txt  release-manifest.json
releases/v0.1.85/: SHA256SUMS.android.txt  SHA256SUMS.txt  release-manifest.json
releases/v0.1.86/: SHA256SUMS.android.txt  SHA256SUMS.txt  release-manifest.json
scripts/: disable-tauri-updater.mjs
scripts/local-build/: android-regression.sh  build-all.sh  build-android-release.sh  build-android.sh  build-ios.sh  build-linux-docker.sh  build-macos-host.sh  generate-checksums.mjs  mobile-env.sh  preflight.sh  setup-mobile.sh  update-android-release-meta.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: AppIcon.icns  icon.icns
src-tauri/src/: ai.rs  diagnostics.rs  e2ee.rs  error.rs  key_manager.rs  lib.rs  main.rs  models.rs  vault.rs
src-tauri/src/ssh/: mod.rs
src-tauri/updater/: latest.json.example
src/components/: AppErrorBoundary.tsx  BrandLogo.tsx  CommandPalette.tsx  FirstRunOnboarding.tsx  HostEditDialog.tsx  UnlockScreen.tsx
src/i18n/: core.ts  useI18n.ts
src/schemas/: hostSchemas.ts
src/services/: ai.ts  appInfo.ts  appLog.ts  cloudSync.client.e2e.test.ts  cloudSync.ts  externalLink.ts  inspector.ts  mobileBiometric.ts  mobileOrientation.ts  runtime.ts  sftp.ts  snippetLibrary.ts  snippetWorkflow.regression.test.ts  snippetWorkflow.ts  ssh.ts  tauri.ts  updater.ts  vault.ts
(+23 files in other folders)
