[package]
name = "orbitterm-backend"
version = "0.1.82"
description = "OrbitTerm Tauri backend with async SSH"
authors = ["OrbitTerm Team"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
hmac = "0.12"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
russh = "0.58"
russh-sftp = "2.1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh-key = { version = "0.6", features = ["std", "ed25519", "rsa", "p256", "p384", "p521", "getrandom"] }
tauri = { version = "1.6", features = ["dialog-open", "dialog-save", "shell-open", "system-tray", "updater", "process-relaunch", "process-exit"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "process"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
zeroize = "1.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
