[package]
name = "orbitterm-backend"
version = "0.1.85"
description = "OrbitTerm Tauri backend with async SSH"
authors = ["OrbitTerm Team"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[lib]
name = "orbitterm_backend"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
hmac = "0.12"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
russh = "0.58"
russh-sftp = "2.1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh-key = { version = "0.6", features = ["std", "ed25519", "rsa", "p256", "p384", "p521", "getrandom"] }
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "process"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
zeroize = "1.8"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2.3.2"
tauri-plugin-keychain = "2.0.2"
